--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">pizza _cebanc</string>
+    <string name="app_name">PIZZA</string>
     <string name="action_settings">Opciones</string>
     <string name="btn_logo"></string>
     <string name="nombre">Nombre:</string>
